Removed jib-maven-plugin for Study Datastore
Removed jib-maven-plugin for Study Datastore